# ros-examples

./: readme.md
my_robot_bringup/: CMakeLists.txt  package.xml
my_robot_bringup/config/: move_robot_action.yaml  my_lifecycle_action_server.yaml  my_robot_controllers.yaml
my_robot_bringup/launch/: move_robot_action.launch.xml  my_lifecycle_action_server.launch.xml  my_robot.launch.py  my_robot.launch.xml  my_service_server_client.launch.xml  my_topic_publisher_subscriber.launch.xml  time_topic.launch.xml  validate_fiscal_code_service.launch.xml
my_robot_description/: CMakeLists.txt  package.xml
my_robot_description/config/: my_robot.rviz
my_robot_description/launch/: display.launch.py  display.launch.xml
my_robot_description/urdf/: arm.control.xacro  arm.xacro  inertial_macros.xacro  materials.xacro  mobile_base.control.xacro  mobile_base.xacro  my_robot.urdf.xacro
my_robot_interfaces/: CMakeLists.txt  package.xml
my_robot_interfaces/action/: MoveRobot.action
my_robot_interfaces/msg/: Time.msg  Turtle.msg
my_robot_interfaces/srv/: SetState.srv  ValidateFiscalCode.srv
my_robot_nodes/: CMakeLists.txt  package.xml
my_robot_nodes/include/my_robot_nodes/: lifecycle_manager.hpp  move_robot_client.hpp  move_robot_server.hpp  my_action_client.hpp  my_lifecycle_action_server.hpp  my_lifecycle_manager.hpp  my_publisher.hpp  my_service_client.hpp  my_service_server.hpp  my_subscriber.hpp  my_topic_publisher.hpp  my_topic_subscriber.hpp  time_publisher.hpp  time_subscriber.hpp  validate_fiscal_code_client.hpp  validate_fiscal_code_server.hpp
my_robot_nodes/src/: lifecycle_manager.cpp  move_robot_client.cpp  move_robot_server.cpp  my_action_client.cpp  my_lifecycle_action_server.cpp  my_lifecycle_manager.cpp  my_publisher.cpp  my_service_client.cpp  my_service_server.cpp  my_subscriber.cpp  my_topic_publisher.cpp  my_topic_subscriber.cpp  time_publisher.cpp  time_subscriber.cpp  validate_fiscal_code_client.cpp  validate_fiscal_code_server.cpp
